--- a/pages/contact.html
+++ b/pages/contact.html
@@ -91,6 +91,14 @@
            class="ml-4 bg-green-700 text-white px-4 py-2 rounded-full hover:bg-green-800 ">
           Join Us
         </a>
+        <!-- Profile Avatar Button -->
+<a href="/pages/admin-login.html"
+   class="ml-4 flex items-center">
+   <img src="../images/executives/president.jpg" 
+        alt="Profile Avatar" 
+        class="h-10 w-10 rounded-full object-cover border-2 border-gray-700 hover:border-green-700 transition">
+</a>
+
       </div>
     </div>
   </div>
