--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -140,72 +140,153 @@
     <a href="/pages/contact.html" class="block hover:text-green-700 hover:font-bold">Contact</a>
   </div>
 </nav>
-
 <!-- Hero Section -->
-  <section class="bg-green-100 py-12 text-center">
-    <h1 class="text-4xl font-bold text-green-800">Our Gallery</h1>
-    <p class="mt-3 text-gray-700 max-w-2xl mx-auto">
-      A glimpse into the impactful moments, events, and initiatives of Federal Youth Parliament.
+<section class="relative h-[60vh] flex items-center justify-center text-center">
+  <!-- Background Image -->
+  <div class="absolute inset-0">
+    <img src="../images/home/bg2.jpg" alt="Gallery Background" class="w-full h-full object-cover">
+    <div class="absolute inset-0 bg-black/60"></div>
+  </div>
+
+  <!-- Content -->
+  <div class="relative z-10 px-6">
+    <h1 class="text-4xl md:text-6xl font-extrabold text-white">
+      Our <span class="text-green-500">Gallery</span>
+    </h1>
+    <p class="mt-6 text-lg md:text-xl text-gray-200 max-w-2xl mx-auto leading-relaxed">
+      Explore snapshots of our <span class="text-green-400 font-semibold">journey</span>, 
+      highlighting <span class="text-green-400 font-semibold">youth-led programs</span>, 
+      <span class="text-green-400 font-semibold">events</span>, and <span class="text-green-400 font-semibold">achievements</span>.
     </p>
-  </section>
+  </div>
+</section>
 
-  <!-- Gallery Section -->
-  <section class="max-w-7xl mx-auto px-6 py-12">
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+<!-- Gallery Section -->
+<section class="max-w-7xl mx-auto px-6 py-16">
+  <h2 class="text-3xl md:text-4xl font-extrabold text-center mb-4">
+    <span class="text-gray-900">Photo</span> <span class="text-green-600">Gallery</span>
+  </h2>
+  <p class="text-center text-gray-600 max-w-2xl mx-auto mb-10">
+    Relive the most inspiring and memorable moments from Federal Youth Parliament’s activities and programs.
+  </p>
 
-      <!-- Image Card -->
-      <div class="overflow-hidden rounded-xl shadow-lg hover:shadow-2xl hover:scale-105 transition transform duration-300">
-        <img src="../images/executives/vice-president.jpg" alt="Gallery Image" class="w-full h-56 object-cover">
-      </div>
-
-      <div class="overflow-hidden rounded-xl shadow-lg hover:shadow-2xl hover:scale-105 transition transform duration-300">
-        <img src="../images/executives/general-sect2.jpg" alt="Gallery Image" class="w-full h-56 object-cover">
-      </div>
-
-      <div class="overflow-hidden rounded-xl shadow-lg hover:shadow-2xl hover:scale-105 transition transform duration-300">
-        <img src="../images/executives/president.jpg" alt="Gallery Image" class="w-full h-56 object-cover">
-      </div>
-
-      <div class="overflow-hidden rounded-xl shadow-lg hover:shadow-2xl hover:scale-105 transition transform duration-300">
-        <img src="../images/executives/vice-president.jpg" alt="Gallery Image" class="w-full h-56 object-cover">
-      </div>
-
-      <!-- Add more images as needed -->
-<!-- Image Card -->
-      <div class="overflow-hidden rounded-xl shadow-lg hover:shadow-2xl hover:scale-105 transition transform duration-300">
-        <img src="../images/executives/vice-president.jpg" alt="Gallery Image" class="w-full h-56 object-cover">
-      </div>
-
-      <div class="overflow-hidden rounded-xl shadow-lg hover:shadow-2xl hover:scale-105 transition transform duration-300">
-        <img src="../images/executives/general-sect2.jpg" alt="Gallery Image" class="w-full h-56 object-cover">
-      </div>
-
-      <div class="overflow-hidden rounded-xl shadow-lg hover:shadow-2xl hover:scale-105 transition transform duration-300">
-        <img src="../images/executives/president.jpg" alt="Gallery Image" class="w-full h-56 object-cover">
-      </div>
-
-      <div class="overflow-hidden rounded-xl shadow-lg hover:shadow-2xl hover:scale-105 transition transform duration-300">
-        <img src="../images/executives/vice-president.jpg" alt="Gallery Image" class="w-full h-56 object-cover">
-      </div>
-<!-- Image Card -->
-      <div class="overflow-hidden rounded-xl shadow-lg hover:shadow-2xl hover:scale-105 transition transform duration-300">
-        <img src="../images/executives/vice-president.jpg" alt="Gallery Image" class="w-full h-56 object-cover">
-      </div>
-
-      <div class="overflow-hidden rounded-xl shadow-lg hover:shadow-2xl hover:scale-105 transition transform duration-300">
-        <img src="../images/executives/general-sect2.jpg" alt="Gallery Image" class="w-full h-56 object-cover">
-      </div>
-
-      <div class="overflow-hidden rounded-xl shadow-lg hover:shadow-2xl hover:scale-105 transition transform duration-300">
-        <img src="../images/executives/president.jpg" alt="Gallery Image" class="w-full h-56 object-cover">
-      </div>
-
-      <div class="overflow-hidden rounded-xl shadow-lg hover:shadow-2xl hover:scale-105 transition transform duration-300">
-        <img src="../images/executives/vice-president.jpg" alt="Gallery Image" class="w-full h-56 object-cover">
-      </div>
-
+ <!-- Gallery Grid -->
+<div class="grid md:grid-cols-3 gap-6 max-w-6xl mx-auto mt-10">
+  
+  <!-- Card 1 -->
+  <div class="relative group h-[400px] rounded-xl overflow-hidden shadow-lg transition-all duration-500">
+    <img class="h-full w-full object-cover object-center"
+      src="../images/gallery/leadership-program.jpg"
+      alt="Leadership Program">
+    <div
+      class="absolute inset-0 flex flex-col justify-end p-6 text-white bg-black/50 opacity-0 group-hover:opacity-100 transition-all duration-300">
+      <h1 class="text-2xl font-bold">Leadership Program</h1>
+      <p class="text-sm">Empowering youth through leadership training and skill development.</p>
     </div>
-  </section>
+  </div>
+
+  <!-- Card 2 -->
+  <div class="relative group h-[400px] rounded-xl overflow-hidden shadow-lg transition-all duration-500">
+    <img class="h-full w-full object-cover object-center"
+      src="../images/gallery/plantation-drive.jpg"
+      alt="Plantation Drive">
+    <div
+      class="absolute inset-0 flex flex-col justify-end p-6 text-white bg-black/50 opacity-0 group-hover:opacity-100 transition-all duration-300">
+      <h1 class="text-2xl font-bold">Plantation Drive</h1>
+      <p class="text-sm">Organizing plantation drives to promote environmental awareness.</p>
+    </div>
+  </div>
+
+  <!-- Card 3 -->
+  <div class="relative group h-[400px] rounded-xl overflow-hidden shadow-lg transition-all duration-500">
+    <img class="h-full w-full object-cover object-center"
+      src="../images/gallery/youth-gathering.jpg"
+      alt="Youth Gathering">
+    <div
+      class="absolute inset-0 flex flex-col justify-end p-6 text-white bg-black/50 opacity-0 group-hover:opacity-100 transition-all duration-300">
+      <h1 class="text-2xl font-bold">Youth Gathering</h1>
+      <p class="text-sm">Arranging gatherings to connect and empower young minds.</p>
+    </div>
+  </div>
+  <!-- Card 4 -->
+  <div class="relative group h-[400px] rounded-xl overflow-hidden shadow-lg transition-all duration-500">
+    <img class="h-full w-full object-cover object-center"
+      src="../images/gallery/leadership-program.jpg"
+      alt="Leadership Program">
+    <div
+      class="absolute inset-0 flex flex-col justify-end p-6 text-white bg-black/50 opacity-0 group-hover:opacity-100 transition-all duration-300">
+      <h1 class="text-2xl font-bold">Leadership Program</h1>
+      <p class="text-sm">Empowering youth through leadership training and skill development.</p>
+    </div>
+  </div>
+
+
+
+  <!-- Card 5 -->
+  <div class="relative group h-[400px] rounded-xl overflow-hidden shadow-lg transition-all duration-500">
+    <img class="h-full w-full object-cover object-center"
+      src="../images/gallery/youth-gathering.jpg"
+      alt="Youth Gathering">
+    <div
+      class="absolute inset-0 flex flex-col justify-end p-6 text-white bg-black/50 opacity-0 group-hover:opacity-100 transition-all duration-300">
+      <h1 class="text-2xl font-bold">Youth Gathering</h1>
+      <p class="text-sm">Arranging gatherings to connect and empower young minds.</p>
+    </div>
+  </div>
+
+
+  <!-- Card 6 -->
+  <div class="relative group h-[400px] rounded-xl overflow-hidden shadow-lg transition-all duration-500">
+    <img class="h-full w-full object-cover object-center"
+      src="../images/gallery/youth-gathering.jpg"
+      alt="Youth Gathering">
+    <div
+      class="absolute inset-0 flex flex-col justify-end p-6 text-white bg-black/50 opacity-0 group-hover:opacity-100 transition-all duration-300">
+      <h1 class="text-2xl font-bold">Youth Gathering</h1>
+      <p class="text-sm">Arranging gatherings to connect and empower young minds.</p>
+    </div>
+  </div>
+  <!-- Card 7 -->
+  <div class="relative group h-[400px] rounded-xl overflow-hidden shadow-lg transition-all duration-500">
+    <img class="h-full w-full object-cover object-center"
+      src="../images/gallery/leadership-program.jpg"
+      alt="Leadership Program">
+    <div
+      class="absolute inset-0 flex flex-col justify-end p-6 text-white bg-black/50 opacity-0 group-hover:opacity-100 transition-all duration-300">
+      <h1 class="text-2xl font-bold">Leadership Program</h1>
+      <p class="text-sm">Empowering youth through leadership training and skill development.</p>
+    </div>
+  </div>
+
+  <!-- Card 8 -->
+  <div class="relative group h-[400px] rounded-xl overflow-hidden shadow-lg transition-all duration-500">
+    <img class="h-full w-full object-cover object-center"
+      src="../images/gallery/plantation-drive.jpg"
+      alt="Plantation Drive">
+    <div
+      class="absolute inset-0 flex flex-col justify-end p-6 text-white bg-black/50 opacity-0 group-hover:opacity-100 transition-all duration-300">
+      <h1 class="text-2xl font-bold">Plantation Drive</h1>
+      <p class="text-sm">Organizing plantation drives to promote environmental awareness.</p>
+    </div>
+  </div>
+
+  <!-- Card 9 -->
+  <div class="relative group h-[400px] rounded-xl overflow-hidden shadow-lg transition-all duration-500">
+    <img class="h-full w-full object-cover object-center"
+      src="../images/gallery/youth-gathering.jpg"
+      alt="Youth Gathering">
+    <div
+      class="absolute inset-0 flex flex-col justify-end p-6 text-white bg-black/50 opacity-0 group-hover:opacity-100 transition-all duration-300">
+      <h1 class="text-2xl font-bold">Youth Gathering</h1>
+      <p class="text-sm">Arranging gatherings to connect and empower young minds.</p>
+    </div>
+  </div>
+
+  <!-- Repeat more cards for other images (they’ll automatically flow into new rows of 3) -->
+
+</div>
+
+</section>
 
   <!-- ********************************Footer********************************** -->
 <footer class="bg-white text-gray-800 py-12 border-t border-gray-200">
