added incorporation certificate to about page. Fixed mobile menu button isssue on small screens

--- a/pages/Gallery.html
+++ b/pages/Gallery.html
@@ -353,7 +353,9 @@
     © 2025 <span class="text-green-600 font-semibold">Federal Youth Parliment</span>. 
     <span class="text-yellow-600">All rights reserved.</span>
   </div>
+
 </footer>
 
+<script src="../scripts/script.js"></script>
 </body>
 </html>
