--- a/pages/constitution.html
+++ b/pages/constitution.html
@@ -276,6 +276,8 @@
     © 2025 <span class="text-green-600 font-semibold">Federal Youth Parliment</span>. 
     <span class="text-yellow-600">All rights reserved.</span>
   </div>
+
+<script src="../scripts/script.js"></script>
 </footer>
 </body>
 </html>
