--- a/pages/memberList.html
+++ b/pages/memberList.html
@@ -394,6 +394,7 @@
   </div>
 </footer>
 
+<script src="../scripts/script.js"></script>
 <script>
   (function () {
     const input = document.getElementById('searchInput');
