--- a/pages/news.html
+++ b/pages/news.html
@@ -290,5 +290,7 @@
     <span class="text-yellow-600">All rights reserved.</span>
   </div>
 </footer>
+
+<script src="../scripts/script.js"></script>
 </body>
 </html>
