--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
           <img src="./images/executives/president.jpg" alt="President"
                class="w-36 h-36 rounded-full border-4 border-green-600 shadow-lg object-cover mb-4" />
           <h3 class="text-xl font-bold text-gray-800">Muhammad Ibrar Khilji</h3>
-          <p class="text-green-700 font-semibold mb-3">President</p>
+          <p class="text-green-700 font-semibold mb-3">President / Chairman</p>
           <p class="text-gray-700 text-center text-sm leading-relaxed">
             Driving change through youth leadership, innovation, and a commitment to national progress.
           </p>
