--- a/pages/Achievements.html
+++ b/pages/Achievements.html
@@ -379,6 +379,7 @@
   </div>
 </footer>
 
+<script src="../scripts/script.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
     AOS.init({
