--- a/pages/contact.html
+++ b/pages/contact.html
@@ -309,6 +309,7 @@
   </div>
 </footer>
 
+<script src="../scripts/script.js"></script>
  <!-- AOS JS -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
