--- a/pages/executive.html
+++ b/pages/executive.html
@@ -183,164 +183,78 @@
  
 </section>
 
+<!-- Executive Members Section -->
+<section class="w-full py-20 bg-gradient-to-b from-green-50 to-white">
+  <div class="max-w-7xl mx-auto px-6">
+    <h2 class="text-center font-extrabold text-4xl md:text-5xl text-green-800 mb-16" data-aos="fade-up">
+      Executive Members
+    </h2>
 
-  <!-- Executive Members Section -->
-  <section class="w-full py-20 bg-white">
-    <div class="max-w-6xl mx-auto px-4 text-center">
-      <h2 class="font-bold text-3xl text-green-800 mb-12" data-aos="fade-up">
-        Executive Members
-      </h2>
-
-      <!-- Cards wrapper -->
-      <div class="mt-8 grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
-
-        <!-- Card 1 -->
-        <div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl"
-             data-aos="fade-right">
-          <div class="absolute inset-0">
-            <img src="../images/executives/vice-president.jpg" alt="Vice President"
-              class="w-full h-full object-cover opacity-60" />
-            <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
-          </div>
-          <div class="relative flex flex-col items-center p-6">
-            <img src="../images/executives/vice-president.jpg" alt="Vice President"
-              class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
-            <h3 class="text-xl font-bold text-gray-800">Salah Uddin Khan</h3>
-            <p class="text-green-700 font-semibold mb-3">Vice President</p>
-            <p class="text-gray-700 text-center text-sm leading-relaxed">
-              Visionary leader dedicated to empowering youth through innovation, collaboration, 
-              and impactful community programs.
-            </p>
-          </div>
-          <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
-            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-instagram"></i></a>
-          </div>
+    <!-- Member 1 -->
+    <div class="grid md:grid-cols-2 gap-10 items-center mb-20" data-aos="fade-up">
+      <div class="flex justify-center">
+        <img src="../images/executives/president.jpg" alt="President"
+             class="w-72 h-72 object-cover rounded-3xl shadow-xl border-4 border-green-600" />
+      </div>
+      <div>
+        <h3 class="text-3xl font-bold text-gray-800">Muhammad Ibrar Khilji</h3>
+        <p class="text-green-700 font-semibold mb-4">President / Chairman</p>
+        <blockquote class="text-xl italic text-gray-700 leading-relaxed border-l-4 border-green-600 pl-4">
+          “As President, I envision building a community where every voice matters 
+          and innovation drives meaningful change.”
+        </blockquote>
+        <div class="flex gap-5 mt-6">
+          <a href="#" class="text-gray-500 hover:text-green-700 transition text-2xl"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="text-gray-500 hover:text-green-700 transition text-2xl"><i class="fab fa-instagram"></i></a>
         </div>
-
-        <!-- Card 2 -->
-        <div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl"
-             data-aos="fade-up">
-          <div class="absolute inset-0">
-            <img src="../images/executives/president.jpg" alt="President"
-              class="w-full h-full object-cover opacity-60" />
-            <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
-          </div>
-          <div class="relative flex flex-col items-center p-6">
-            <img src="../images/executives/president.jpg" alt="President"
-              class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
-            <h3 class="text-xl font-bold text-gray-800">Muhammad Ibrar Khilji</h3>
-            <p class="text-green-700 font-semibold mb-3">President</p>
-            <p class="text-gray-700 text-center text-sm leading-relaxed">
-              Visionary leader dedicated to empowering youth through innovation, collaboration, 
-              and impactful community programs.
-            </p>
-          </div>
-          <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
-            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-instagram"></i></a>
-          </div>
-        </div>
-
-        <!-- Card 3 -->
-        <div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl"
-             data-aos="fade-left">
-          <div class="absolute inset-0">
-            <img src="../images/executives/general-sect2.jpg" alt="General Secretary"
-              class="w-full h-full object-cover opacity-60" />
-            <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
-          </div>
-          <div class="relative flex flex-col items-center p-6">
-            <img src="../images/executives/general-sect2.jpg" alt="General Secretary"
-              class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
-            <h3 class="text-xl font-bold text-gray-800">Saqib Ali</h3>
-            <p class="text-green-700 font-semibold mb-3">General Secretary</p>
-            <p class="text-gray-700 text-center text-sm leading-relaxed">
-              Visionary leader dedicated to empowering youth through innovation, collaboration, 
-              and impactful community programs.
-            </p>
-          </div>
-          <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
-            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-instagram"></i></a>
-          </div>
-        </div>
-
-        <!-- Card 4 -->
-        <div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl"
-             data-aos="fade-right">
-          <div class="absolute inset-0">
-            <img src="../images/executives/general-sect2.jpg" alt="Member"
-              class="w-full h-full object-cover opacity-60" />
-            <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
-          </div>
-          <div class="relative flex flex-col items-center p-6">
-            <img src="../images/executives/general-sect2.jpg" alt="Member"
-              class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
-            <h3 class="text-xl font-bold text-gray-800">Dummy Name</h3>
-            <p class="text-green-700 font-semibold mb-3">Joint Secretary</p>
-            <p class="text-gray-700 text-center text-sm leading-relaxed">
-              Visionary leader dedicated to empowering youth through innovation, collaboration, 
-              and impactful community programs.
-            </p>
-          </div>
-          <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
-            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-instagram"></i></a>
-          </div>
-        </div>
-
-        <!-- Card 5 -->
-        <div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl"
-             data-aos="fade-up">
-          <div class="absolute inset-0">
-            <img src="../images/executives/general-sect2.jpg" alt="Member"
-              class="w-full h-full object-cover opacity-60" />
-            <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
-          </div>
-          <div class="relative flex flex-col items-center p-6">
-            <img src="../images/executives/general-sect2.jpg" alt="Member"
-              class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
-            <h3 class="text-xl font-bold text-gray-800">Dummy Name</h3>
-            <p class="text-green-700 font-semibold mb-3">Dummy Role</p>
-            <p class="text-gray-700 text-center text-sm leading-relaxed">
-              Visionary leader dedicated to empowering youth through innovation, collaboration, 
-              and impactful community programs.
-            </p>
-          </div>
-          <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
-            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-instagram"></i></a>
-          </div>
-        </div>
-
-        <!-- Card 6 -->
-        <div class="max-w-sm mx-auto shadow-xl rounded-2xl overflow-hidden border border-gray-200 relative transform transition duration-300 hover:-translate-y-2 hover:scale-105 hover:shadow-xl"
-             data-aos="fade-left">
-          <div class="absolute inset-0">
-            <img src="../images/executives/general-sect2.jpg" alt="Member"
-              class="w-full h-full object-cover opacity-60" />
-            <div class="absolute inset-0 bg-green-50 bg-opacity-60"></div>
-          </div>
-          <div class="relative flex flex-col items-center p-6">
-            <img src="../images/executives/general-sect2.jpg" alt="Member"
-              class="w-40 h-40 rounded-full border-4 border-green-600 shadow-md object-cover mb-4" />
-            <h3 class="text-xl font-bold text-gray-800">Dummy Name</h3>
-            <p class="text-green-700 font-semibold mb-3">Dummy Role</p>
-            <p class="text-gray-700 text-center text-sm leading-relaxed">
-              Visionary leader dedicated to empowering youth through innovation, collaboration, 
-              and impactful community programs.
-            </p>
-          </div>
-          <div class="relative flex justify-center gap-6 py-4 bg-white/70 backdrop-blur-md border-t">
-            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="text-gray-500 hover:text-green-700 transition text-xl"><i class="fab fa-instagram"></i></a>
-          </div>
-        </div>
-
       </div>
     </div>
-  </section>
+
+    <!-- Member 2 -->
+    <div class="grid md:grid-cols-2 gap-10 items-center mb-20 md:flex-row-reverse" data-aos="fade-up">
+      <div class="flex justify-center md:order-2">
+        <img src="../images/executives/vice-president.jpg" alt="Vice President"
+             class="w-72 h-72 object-cover rounded-3xl shadow-xl border-4 border-green-600" />
+      </div>
+      <div class="md:order-1">
+        <h3 class="text-3xl font-bold text-gray-800">Salah Uddin Khan</h3>
+        <p class="text-green-700 font-semibold mb-4">Vice President</p>
+        <blockquote class="text-xl italic text-gray-700 leading-relaxed border-l-4 border-green-600 pl-4">
+          “My mission is to empower youth through knowledge and opportunities, 
+          fostering innovation and leadership.”
+        </blockquote>
+        <div class="flex gap-5 mt-6">
+          <a href="#" class="text-gray-500 hover:text-green-700 transition text-2xl"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="text-gray-500 hover:text-green-700 transition text-2xl"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Member 3 -->
+    <div class="grid md:grid-cols-2 gap-10 items-center mb-20" data-aos="fade-up">
+      <div class="flex justify-center">
+        <img src="../images/executives/general-sect2.jpg" alt="General Secretary"
+             class="w-72 h-72 object-cover rounded-3xl shadow-xl border-4 border-green-600" />
+      </div>
+      <div>
+        <h3 class="text-3xl font-bold text-gray-800">Saqib Ali</h3>
+        <p class="text-green-700 font-semibold mb-4">General Secretary</p>
+        <blockquote class="text-xl italic text-gray-700 leading-relaxed border-l-4 border-green-600 pl-4">
+          “I believe in collaboration and teamwork, ensuring smooth communication 
+          and effective organizational growth.”
+        </blockquote>
+        <div class="flex gap-5 mt-6">
+          <a href="#" class="text-gray-500 hover:text-green-700 transition text-2xl"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="text-gray-500 hover:text-green-700 transition text-2xl"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Repeat for other members -->
+
+  </div>
+</section>
+
 
   <!-- Call To Action Section -->
   <section class="w-full bg-[#FAF3DD] py-16">
@@ -432,6 +346,7 @@
   </div>
 </footer>
 
+<script src="../scripts/script.js"></script>
 <!-- AOS JS -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
