--- a/pages/membership.html
+++ b/pages/membership.html
@@ -325,6 +325,7 @@
   </div>
 </footer>
 
+<script src="../scripts/script.js"></script>
  <!-- AOS JS -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
