--- a/pages/programs.html
+++ b/pages/programs.html
@@ -359,6 +359,7 @@
   </div>
 </footer>
 
+<script src="../scripts/script.js"></script>
 
  <!-- AOS JS -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
