fixed footer date to change dynamically

--- a/pages/about.html
+++ b/pages/about.html
@@ -402,7 +402,7 @@ Below is our Certificate of Incorporation, which reflects our legitimacy and cre
 
 
 
-<!-- ********************************Footer********************************** -->
+<<!-- ********************************Footer********************************** -->
 <footer class="bg-white text-gray-800 py-12 border-t border-gray-200">
   <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-10">
 
@@ -420,9 +420,9 @@ Below is our Certificate of Incorporation, which reflects our legitimacy and cre
     <!-- Logo + Description -->
     <div class="text-center">
       <div class="flex justify-center items-center mb-4">
-        <img src="../images/logo.jpg" alt="Logo" class="w-14 h-14 mr-3 rounded-full shadow-lg border-2 border-green-600">
+        <img src="./images/logo.jpg" alt="Logo" class="w-14 h-14 mr-3 rounded-full shadow-lg border-2 border-green-600">
         <h2 class="text-2xl font-bold">
-          Federal Youth <span class="text-green-600">PARLIMENT</span>
+          Federal Youth <span class="text-green-600">PARLIAMENT</span>
         </h2>
       </div>
       <p class="text-gray-600 text-sm leading-relaxed">
@@ -443,7 +443,7 @@ Below is our Certificate of Incorporation, which reflects our legitimacy and cre
           +92 336 1098720 </li>
         <li class="flex items-center gap-2">
           <i class="fa-solid fa-envelope text-green-600"></i>
-          federalyouthparlimentpakistan@gmail.com
+          federalyouthparliamentpakistan@gmail.com
         </li>
       </ul>
 
@@ -461,11 +461,11 @@ Below is our Certificate of Incorporation, which reflects our legitimacy and cre
     </div>
 
   </div>
-   <p class="text-center text-gray-500 my-4 font-bold flex gap-2 justify-center items-center">Developed By <img src="../images/cc-logo.png" alt="logo" class="h-12 rounded-full object-cover flex items-center"> <span class="text-yellow-400">Code</span><span class="text-blue-400">Club</span> </p>
 
+    <p class="text-center text-gray-500 my-4 font-bold flex gap-2 justify-center items-center">Developed By <img src="../images/cc-logo.png" alt="logo" class="h-12 rounded-full object-cover flex items-center"> <span class="text-yellow-400">Code</span><span class="text-blue-400">Club</span> </p>
   <!-- Bottom Line -->
   <div class="mt-10 border-t border-gray-200 pt-4 text-center text-sm text-gray-500">
-    © 2025 <span class="text-green-600 font-semibold">Federal Youth Parliment</span>. 
+    © <span class="footerYear"></span> <span class="text-green-600 font-semibold">Federal Youth Parliament</span>. 
     <span class="text-yellow-600">All rights reserved.</span>
   </div>
 </footer>
