--- a/pages/executive.html
+++ b/pages/executive.html
@@ -295,9 +295,9 @@
     <!-- Logo + Description -->
     <div class="text-center">
       <div class="flex justify-center items-center mb-4">
-        <img src="../images/logo.jpg" alt="Logo" class="w-14 h-14 mr-3 rounded-full shadow-lg border-2 border-green-600">
+        <img src="./images/logo.jpg" alt="Logo" class="w-14 h-14 mr-3 rounded-full shadow-lg border-2 border-green-600">
         <h2 class="text-2xl font-bold">
-          Federal Youth <span class="text-green-600">PARLIMENT</span>
+          Federal Youth <span class="text-green-600">PARLIAMENT</span>
         </h2>
       </div>
       <p class="text-gray-600 text-sm leading-relaxed">
@@ -318,7 +318,7 @@
           +92 336 1098720 </li>
         <li class="flex items-center gap-2">
           <i class="fa-solid fa-envelope text-green-600"></i>
-          federalyouthparlimentpakistan@gmail.com
+          federalyouthparliamentpakistan@gmail.com
         </li>
       </ul>
 
@@ -337,11 +337,10 @@
 
   </div>
 
-   <p class="text-center text-gray-500 my-4 font-bold flex gap-2 justify-center items-center">Developed By <img src="../images/cc-logo.png" alt="logo" class="h-12 rounded-full object-cover flex items-center"> <span class="text-yellow-400">Code</span><span class="text-blue-400">Club</span> </p>
-
+    <p class="text-center text-gray-500 my-4 font-bold flex gap-2 justify-center items-center">Developed By <img src="../images/cc-logo.png" alt="logo" class="h-12 rounded-full object-cover flex items-center"> <span class="text-yellow-400">Code</span><span class="text-blue-400">Club</span> </p>
   <!-- Bottom Line -->
   <div class="mt-10 border-t border-gray-200 pt-4 text-center text-sm text-gray-500">
-    © 2025 <span class="text-green-600 font-semibold">Federal Youth Parliment</span>. 
+    © <span class="footerYear"></span> <span class="text-green-600 font-semibold">Federal Youth Parliament</span>. 
     <span class="text-yellow-600">All rights reserved.</span>
   </div>
 </footer>
