added images to programs and backgroud slide show provided by client

--- a/pages/membership.html
+++ b/pages/membership.html
@@ -377,7 +377,8 @@
     Age: ${data.age}%0A
     Date of Birth: ${data.dob}%0A
     Province: ${data.province}%0A
-    Education: ${data.education}`;
+    Education: ${data.education}%0A
+    Reason to Join: ${data.reason}`;
 
 
     window.open(`https://wa.me/${phone}?text=${message}`, "_blank");
