updated previous commit

--- a/index.html
+++ b/index.html
@@ -161,9 +161,8 @@
   <!-- Background Slideshow -->
   <div id="slideshow" class="absolute inset-0">
     <img src="./images/home/bg.jpg" class="absolute inset-0 w-full h-full object-cover opacity-100 transition-opacity duration-1000" />
-    <img src="./images/home/about-img.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-1000" />
-    <img src="./images/home/bg.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-1000" />
     <img src="./images/home/bg2.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-1000" />
+    <img src="./images/home/bg3.jpg" class="absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-1000" />
   </div>
 
   <!-- Dark Overlay -->
